--- a/website/notebook/index.html
+++ b/website/notebook/index.html
@@ -56,6 +56,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 				<div class="left-in">
 
 					<p>lots and lots of links. i save them all here!</p>
+					<li><a href="links/credit.html" target="iframe_a">site insp &amp; credit</a></li>
 					<li><a href="links/index.html" target="iframe_a">links</a></li>
 					<ul>
 						↳ <a href="links#c" target="iframe_a">coding</a>
@@ -88,14 +89,13 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 							</small></ul>
 					</ul>
 					<li><a href="links/fonts.html" target="iframe_a">font page</a></li>
-					<li><a href="links/credit.html" target="iframe_a">site inspiration &amp; credit</a></li>
 					<li><a href="/sites" class="outlink">button wall</a> for other websites!</li>
 					<!-- paper-left end div -->
 				</div>
 			</div>
 
 			<div id="link-p" class="paper right">
-				<iframe src="links" name="iframe_a" height="600px" width="488px" style="border:none"></iframe>
+				<iframe src="links/credit.html" name="iframe_a" height="600px" width="488px" style="border:none"></iframe>
 				<!-- paper right end div -->
 			</div>
 			<!-- 	link wrapper end div -->
@@ -192,7 +192,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 			</div>
 
 			<div id="F2U-p" class="paper right">
-				<iframe src="F2U/materials.html" name="iframe_d" height="600px" width="489px" style="border:none"></iframe>
+				<iframe src="F2U/codes.html" name="iframe_d" height="600px" width="489px" style="border:none"></iframe>
 
 				<!-- 	paper right end div -->
 			</div>
@@ -210,7 +210,7 @@ https://coolors.co/e3edff-fff4bf-d1ebcd-ffe3e3-e2d2f0
 
 						</div>
 					</div>
-					<p>in this page you'll find a variery of things i have saved for my own reference, but maybe they might be helpful (or at least interesting) for you too!</p>
+					<p>in this page you'll find a variety of things i have saved for my own reference, but maybe they might be helpful (or at least interesting) for you too!</p>
 					<p>i also have things related to the making of this website here!</p>
 					<p><mark>click on the tabs to navigate it</mark> <img src="/!g/deco/catlaying.gif"></p>
 					<p><a href="/home">go back home?</a> <img src="/about/!g/adopted/midnightcreamy_star3.gif"> </p>
