15.jan.24 - created cat hoarding

--- a/website/collection/index.html
+++ b/website/collection/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html lang="en">
 
 <head>
 	<!-- 
@@ -36,19 +37,19 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 	<div id="wrapper">
 		<img src="/!g/deco/bunny2.gif" class="border" style="position:absolute;" width="400px">
 		<div class="container">
-			<p class="desc">i like <b>collecting</b> things
+			<p class="desc">i like <b>collecting</b> things</p>
 			<ul>
 				<li><a title="WARNING! page contains flashing gifs, while not a ton or fast-paced, i still figured a warning is nice" href="internet-stamps/index.html">internet graphics</a></li>
+				<li><a href="cats/index.html">cat pics</a></li>
 				<li><a href="mail-stamps/index.html">mail stamps</a></li>
 				<li><a href="stickers/index.html">stickers</a></li>
-				<li>picrews
-				<li>plushies
-				<li>cat memes
+				<li>picrews</li>
+				<li>plushies</li>
 				<li><a href="/music/cds.html">CDs</a></li>
-				<li>quotes
+				<li>quotes</li>
 			</ul>
-			<p class="c"><a href="https://store.line.me/stickershop/product/1200836/en" target="_blank">cat stickers</a> from line store, floating heart imgs from <a href="https://foollovers.com/" target="_blank">foollovers</a>
-				<!-- 		container end div -->
+			<p class="c"><b>credit:</b> <a href="https://store.line.me/stickershop/product/1200836/en" target="_blank">cat stickers</a> from line store, floating heart imgs from <a href="https://foollovers.com/" target="_blank">foollovers</a>, snowflake code by <a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">sadness</a></p>
+			<!-- 		container end div -->
 		</div>
 		<!-- wrapper end div -->
 	</div>
