--- a/website/home.html
+++ b/website/home.html
@@ -53,9 +53,9 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 			<a href="/"><img src="/!g/pix/rainbow1.gif" alt=""> landing page</a>
 			<h3>personal</h3>
-			<a title="the webmaster and site!" href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
-			<a title="personal entries and site talk!" href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
-			<a title="rambling mode where i put in the effort to be as coherent as possible" href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
+			<a href="/about"><img src="/!g/pix/cateepyy.gif" alt=""> about</a>
+			<a href="/journal"><img src="/!g/pix/notebook-1.gif" alt=""> journal</a>
+			<a href="/blog"><img src="/!g/pix/paper.gif" alt=""> blog</a>
 			<a title="WIP!" href="/art"><img src="/!g/pix/catdraw.gif" alt=""> art &amp; crafts</a>
 			<a href="/scrapbook"><img src="!g/pix/scissors6.gif" alt=""> scrapbook <img src="!g/pix/new1.gif"></a>
 			<a href="/photobook"><img src="/!g/pix/camera.gif" alt=""> photobook</a>
@@ -68,8 +68,8 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<h3>misc</h3>
 			<a href="/masaaki-yuasa"><img src="/!g/pix/tv.gif"> masaaki yuasa watchlist</a>
 			<a href="/october-movies"><img src="/!g/pix/gaikotsu2.gif"> october movie log</a>
-			<a title="a digital place where i come to relax with mental health resources" href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
-			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif"> webgarden</a>
+			<a href="safe-spot/index.html"><img src="/!g/pix/flowerpink.gif" alt=""> safe spot</a>
+			<a href="webgarden/greenhouse.html"><img src="/!g/pix/home.gif" alt=""> webgarden</a>
 
 			<h3>site</h3>
 			<a href="/sites"><img src="/!g/pix/favcharas.gif"> button wall</a>
@@ -124,14 +124,15 @@ feel free to look around :) just don't be THAT person and take the entire code f
 				fujimoto</p>
 			<p><span class="hl">watching:</span> - </p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> florida trip journal log + college</p>
-			<p><span class="hl">coding:</span> scrapbook</p>
-			<p class="date">last updated on 11.jan.24</p>
+			<p><span class="hl">working on:</span> going back to college</p>
+			<p><span class="hl">coding:</span> cat pics collection page!</p>
+			<p class="date">last updated on 15.jan.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
-			<li>12.jan.24 - added <a href="/scrapbook">scrapbook</a> pages! <small>will be decorating it more in the future!</small></li>
+			<li>15.jan.24 - created <a href="/collection/cats">cat hoarding</a> page in collection!</li>
+			<li>12.jan.24 - created <a href="/scrapbook">scrapbook</a>! <small>will be decorating it more in the future!</small></li>
 			<li>11.jan.24 - <a href="/journal">journal log</a>: grandma</li>
 			<li>05.jan.24 - <a href="/journal">journal log</a>: back home! + new featured cat</li>
 			<li>25.dec.23 - finished my <a href="music/recaps/2023/index.html">music recap</a> of the year! this will be my last update of the year! happy holidays everyone <img src="!g/pix/crismas.gif" alt=""></li>
