--- a/website/collection/cats/index.html
+++ b/website/collection/cats/index.html
@@ -17,14 +17,14 @@
 <body>
 	<header>
 		<h1>cat hoarding</h1>
-		<p>this is exactly what it sounds like. i love saving these little fellas on my computer. currently in the process of linking to their sources! <img src="p-sakuraw.gif" alt=""> </p>
+		<p>this is exactly what it sounds like. i love saving these little fellas on my computer. <small>currently in the process of linking to their sources and adding alt text to the imgs!</small> <img src="p-sakuraw.gif" alt=""> </p>
 	</header>
 
 	<div id="gallery">
 
 		<!--column 1-->
 		<div class="column">
-			<img src="!g/baby-cat.jpeg">
+			<img src="!g/baby-cat.jpeg" alt="cat with a bib">
 			<img src="!g/ballin.jpeg">
 			<img src="!g/bigoleyes.jpeg">
 			<img src="!g/bleh.jpeg">
