--- a/website/collection/index.html
+++ b/website/collection/index.html
@@ -8,6 +8,7 @@ coded with love by des
 https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
  -->
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>collections</title>
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
 	<link href="/!f/snowflakes.css" rel="stylesheet" type="text/css" media="all">
@@ -15,27 +16,15 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<!-- tooltip shit -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
-	<script src="https://static.tumblr.com/lspzyz3/xloqk6cgp/jquery.style-my-tooltips.js"></script>
-	<script>
-		(function($) {
-			$(document).ready(function() {
-				$("[title]").style_my_tooltips({
-					tip_follows_cursor: true,
-					tip_delay_time: 10,
-					tip_fade_speed: 10,
-					attribute: "title"
-				});
-			});
-		})(jQuery);
-
-	</script>
+	<script src="/!f/tooltip-jquary.js"></script>
+	<script src="/!f/tooltip.js"></script>
 	<!--  end of tooltip shit -->
 </head>
 
 <body>
 
 	<div id="wrapper">
-		<img src="/!g/deco/bunny2.gif" class="border" style="position:absolute;" width="400px">
+		<img src="/!g/deco/bunny2.gif" class="border" style="position:absolute;" width="400px" alt="background">
 		<div class="container">
 			<p class="desc">i like <b>collecting</b> things</p>
 			<ul>
@@ -48,33 +37,38 @@ https://coolors.co/fbeaf0-f48286-f04a4f-fedfcf
 				<li><a href="/music/cds.html">CDs</a></li>
 				<li>quotes</li>
 			</ul>
-			<p class="c"><b>credit:</b> <a href="https://store.line.me/stickershop/product/1200836/en" target="_blank">cat stickers</a> from line store, floating heart imgs from <a href="https://foollovers.com/" target="_blank">foollovers</a>, snowflake code by <a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">sadness</a></p>
 			<!-- 		container end div -->
 		</div>
 		<!-- wrapper end div -->
 	</div>
 
+	<footer>
+		<b>credit:</b> <a href="https://store.line.me/stickershop/product/1200836/en" target="_blank">cat stickers</a> from line store, floating heart imgs from <a href="https://foollovers.com/" target="_blank">foollovers</a>, snowflake code by <a href="https://codepen.io/sadness97/pen/mdOXzNW" target="_blank">sadness</a>
+		<br>
+		<a href="/home">home</a> / <a href="/sitemap">sitemap</a>
+	</footer>
+
 	<div class="home">
-		<a title="go back to homepage" href="/home"><img src="/!g/deco/suchacat1.png" width="200px"></a>
+		<a title="go back to homepage" href="/home"><img src="/!g/deco/suchacat1.png" width="200px" alt="link to homepage"></a>
 	</div>
 
 	<div class="corner-right">
-		<img src="/!g/deco/suchacat2.png" width="200px">
+		<img src="/!g/deco/suchacat2.png" width="200px" alt="">
 	</div>
 
 	<div class="snowflakes">
-		<div class="snowflake"><img src="/!g/pix/ab01-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab02-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab03-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab04-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab05-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab06-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab07-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab08-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab09-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab11-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab12-icon-heart.png"></div>
-		<div class="snowflake"><img src="/!g/pix/ab13-icon-heart.png"></div>
+		<div class="snowflake"><img src="/!g/pix/ab01-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab02-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab03-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab04-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab05-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab06-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab07-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab08-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab09-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab11-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab12-icon-heart.png" alt=""></div>
+		<div class="snowflake"><img src="/!g/pix/ab13-icon-heart.png" alt=""></div>
 		<!--    snowflake end div -->
 	</div>
 
