--- a/website/not_found.html
+++ b/website/not_found.html
@@ -4,6 +4,7 @@
 <head>
 
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>404</title>
 	<link rel="icon" type="image/x-icon" href="favicon.gif">
 	<link href="/fonts/stylesheet.css" rel="stylesheet" type="text/css" media="all">
