--- a/website/home.html
+++ b/website/home.html
@@ -123,13 +123,14 @@ feel free to look around :) just don't be THAT person and take the entire code f
 				fujimoto</p>
 			<p><span class="hl">watching:</span> - </p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> going back to college</p>
-			<p><span class="hl">coding:</span> cat pics collection page!</p>
+			<p><span class="hl">working on:</span> getting an apartment and uni!</p>
+			<p><span class="hl">coding/writing:</span> journal log soon... <img src="/!g/pix/emote1cov.gif" alt=""></p>
 			<p class="date">last updated on 15.jan.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>20.jan.24 - added new entry to <a href="/photobook/index.html">photobook</a> + <a href="/scrapbook/2024/index.html">scrapbook</a> + new featured page!</li>
 			<li>15.jan.24 - created <a href="/collection/cats">cat hoarding</a> page in collection!</li>
 			<li>12.jan.24 - created <a href="/scrapbook">scrapbook</a>! <small>will be decorating it more in the future!</small></li>
 			<li>11.jan.24 - <a href="/journal">journal log</a>: grandma</li>
@@ -252,7 +253,7 @@ feel free to look around :) just don't be THAT person and take the entire code f
 
 		<div id="featured-page" class="box">
 			<h2>featured page</h2>
-			<a title="take me there!" href="/music/recaps/2023/index.html"><img src="!g/recap.jpg"></a>
+			<a title="2024 scrapbook... take me there!" href="/scrapbook/2024/index.html"><img src="!g/scrapbook.jpg"></a>
 		</div>
 
 		<div id="widget" class="box">
