20.jan.24 - photobook update

--- a/website/photobook/index.html
+++ b/website/photobook/index.html
@@ -39,6 +39,7 @@ coded with love by des
 		<p>my <b>instant film</b> pics are taken with a fujifilm instax mini 26. had it since 2018, works like a charm! both the camera and film it uses are pretty affordable. i love the pics you can get with it so i highly recommend it if you're looking for something to have some fun with</p>
 		<p><b>digital</b> pics are from my shitty android phone *crying* wanna save for a nice digital camera someday!
 		</p>
+		<p><small>entries with multiple pics have a hidden scrollbar!</small></p>
 		<div id="p1"><img src="/!g/deco/instant-pic.gif"></div>
 
 		<div id="p3"><img src="/!g/deco/cam-instant.gif"></div>
@@ -111,6 +112,17 @@ hiii this is a caption
 		</div>
 		<!-- 2nd column -->
 		<div class="column">
+
+			<div class="pic digi"><img src="!g/240120-cat-shrine%20(2).jpg" alt="cat shrine"><img src="!g/240120-cat-shrine%20(1).jpg" alt="cat shrine">
+				<div class="hov">
+					<div class="caption">
+						a shrine for a cat, saw this at my uni campus ＞︿＜
+						<br>
+						<b>taken on: 19.jan.24</b>
+					</div>
+				</div>
+			</div>
+
 			<div class="pic film"><img src="!g/210503-mizu-2.jpg">
 				<div class="hov">
 					<div class="caption">
@@ -251,7 +263,8 @@ hiii this is a caption
 			<div class="pic digi"><img src="!g/150405-corrupted-beach.jpg">
 				<div class="hov">
 					<div class="caption">pic i took that ended up getting corrupted. find it very cool to this day</div>
-				</div></div>
+				</div>
+			</div>
 
 			<div class="pic digi"><img src="!g/180703-insect.jpg">
 				<div class="hov">
