updated credit page on journal

--- a/website/journal/credit.html
+++ b/website/journal/credit.html
@@ -19,6 +19,7 @@
 	<p>washi tape, blank bookmark from <a href="https://foollovers.com/" target="_blank">foollovers.com</a></p>
 	<p>calendar iframe from <a href="http://calendar-muryou.com/blog.html" target="_blank">calendar-muryou</a></p>
 	<p>pencil cursor from <a href="https://www.cursors-4u.com/" target="_blank">cursors-4u</a></p>
+	<p>JS code for statuses and microblog tabs from <a href="https://www.w3schools.com/howto/howto_js_tabs.asp" target="_blank">w3schools.com</a></p>
 </body>
 
 </html>
