updated mizu shrine
- added a gallery section so i can update it frequently
- fixed a lot of the code (very messy, repeating ids)

--- a/website/shrines/mizu/index.html
+++ b/website/shrines/mizu/index.html
@@ -25,20 +25,17 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 		<div id="header">
 
 			<div id="headerwords">
-				<h1 class="mizu">mizu!</h1>
+				<h1>mizu!</h1>
 				<p>my sweet baby boy. my meow meow. my everything. my mizu.</p>
 				<p>a shrine by des made for my pet cat!</p>
 			</div>
 
-			<div id="imgleft">
-				<img data-toggle="tooltip" title="soooo eeppyyyyyyyyyyyy zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz" src="!g/soooooeeeeeeeepyyyyyyyyyyyy.jpg" width="300px">
-			</div>
 
-			<div id="imgright">
-				<img data-toggle="tooltip" title="so square.........." src="!g/sosquare.jpg" width="300px">
-			</div>
+			<img class="header-imgs left-img" title="soooo eeppyyyyyyyyyyyy zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz" src="!g/soooooeeeeeeeepyyyyyyyyyyyy.jpg" width="300px">
 
-			<div id="imgcenter"><img data-toggle="tooltip" title="so cute :3" src="!g/meow2.jpg" width="500px"></div>
+			<img class="header-imgs right-img" title="so square.........." src="!g/sosquare.jpg" width="300px">
+
+			<img class="header-imgs center-img" title="so cute :3" src="!g/meow2.jpg" width="500px">
 
 
 			<!-- 				header end div -->
@@ -63,7 +60,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 			</div>
 
 
-			<div id="text" class="left centered">
+			<div class="text-bbl left">
 
 				<p>i remember the day that i met mizu vividly. a core memory. it was evening in october of 2010. i was taking a nap and suddenly my mom wakes me up and goes "hey look what i found" and she then proceeds to show me this black kitten that fits entirely on the palm of her hand. he was so tiny. my mom had just found mizu in our backyard, all alone and meowing. so! my mom decided we should keep him. but we've never had a kitten before! so 10 year old me was tasked with something very important. to research how the hell do you take care of a kitten on the world's slowest pc that had windows xp installed. i remember googling things like <i>"what milk do kittens drink?"</i>, or <i>"how do kittens pee?"</i> it was wild. we did not know a single thing. but we knew that we had to keep him so he wouldnt be alone and lost outside. while i was googling stuff i kept him on my barbie house to make sure he didnt go anywhere while i was doing my research. and i find that so cute. he was such a cute little kitten. the next day we got some kitten formula, alongside a very small milk bottle so we could feed him. he was so so cute when we fed him. he was truly just a lil boy!!!! he would sleep on a cardboard box with a blanket right next to my bed. i would play with him so much. he was so playful.</p>
 			</div>
@@ -89,8 +86,8 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 
 			<div class="deco" style="top:28.5%;left:49%;"><img class="" src="/!g/deco/catrain.gif"></div>
 
-			<div id="text" class="right centered">
-				<p>people (understandably so) seem to think that i named mizu based off the japanese word for water: mizu, but that is not the case!!! you know how when there's a cat nearby ppl just tend to go "pspspsps"? well here in puerto rico we do that but sometimes instead of going "pspspsps" we go "mich mich mich" or "michu michu" to get their atention. so idk i guess 10 year old me really liked that and went ahead and called him "mizu" for the rest of my life.
+			<div class="text-bbl right">
+				<p>people (understandably so) seem to think that i named mizu based off the japanese word for water: mizu, but that is not the case!!! you know how when there's a cat nearby ppl just tend to go "pspspsps"? well here in puerto rico we do that but sometimes instead of going "pspspsps" we go "mich mich mich" or "michu michu" to get their atention. so idk i guess 10 year old me really liked that and went ahead and called him "mizu" for the rest of my life.</p>
 			</div>
 			<!-- 	pic div -->
 			<div id="mizuimg-4" class="elevate">
@@ -108,8 +105,8 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 			<!-- 	stickers -->
 
 
-			<div id="text" class="left centered">
-				<p>after getting mizu in out house, i remember a few days later we actually saw the mom cat with her kittens around our backyard. they seemed pretty chill though it was clear the mom cat had no interest in getting mizu back. we had another cat called <mark>carmela</mark>. she was such a sweet heart. she would visit me while i was at my grandma's and i would feed her these sausages called "carmela" and that's where her name comes from. she seemed to always be around my grandma's so i took her home with me like a few months before finding mizu. all she did was sleep and eat and you know what? slay. but anyway. this is about mizu not carmela. carmela was surprisingly very chill with the new kitten in the house. they would play together sometimes. and i wanna think that carmela helped mizu a lot on "how to cat" since mizu never got to spend a lot of time with his mom. so the things that carmela would do like scratch the nearest tree, lick herself, mizu would go ahead and copy her. i think its very sweet. thanks carmela
+			<div class="text-bbl left">
+				<p>after getting mizu in out house, i remember a few days later we actually saw the mom cat with her kittens around our backyard. they seemed pretty chill though it was clear the mom cat had no interest in getting mizu back. we had another cat called <mark>carmela</mark>. she was such a sweet heart. she would visit me while i was at my grandma's and i would feed her these sausages called "carmela" and that's where her name comes from. she seemed to always be around my grandma's so i took her home with me like a few months before finding mizu. all she did was sleep and eat and you know what? slay. but anyway. this is about mizu not carmela. carmela was surprisingly very chill with the new kitten in the house. they would play together sometimes. and i wanna think that carmela helped mizu a lot on "how to cat" since mizu never got to spend a lot of time with his mom. so the things that carmela would do like scratch the nearest tree, lick herself, mizu would go ahead and copy her. i think its very sweet. thanks carmela.</p>
 			</div>
 
 			<div id="mizuimg-5" class="elevate">
@@ -144,8 +141,8 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 
 			<div class="deco" style="top:47.5%;left:52.5%;"><img title="hanging planter" class="" src="/!g/deco/hangingplant.gif"></div>
 
-			<div id="text" class="right centered">
-				<p>mizu grew up. and very quickly! he mostly spent the time outside, climbing trees, exploring our backyard, chasing lizards and birds... he loved it. i grew up in a very rural place (i was literally surrounded by mountains and trees) so im glad he was able to spend a lot of time outside because of that! and at night he would come home to rest with me. he always kept me company. and he was so warm too. when it was cold i loved putting my hands under his tummy so he would warm them
+			<div class="text-bbl right">
+				<p>mizu grew up. and very quickly! he mostly spent the time outside, climbing trees, exploring our backyard, chasing lizards and birds... he loved it. i grew up in a very rural place (i was literally surrounded by mountains and trees) so im glad he was able to spend a lot of time outside because of that! and at night he would come home to rest with me. he always kept me company. and he was so warm too. when it was cold i loved putting my hands under his tummy so he would warm them.</p>
 			</div>
 			<!-- 	stickers -->
 
@@ -171,8 +168,8 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 			</div>
 
 
-			<div id="text" class="left centered">
-				<p>mizu has been there through my worst times, and my best times. i've spent 11 years of my life with this cat. and man, do i love him so much. i had to say goodbye to him in 2021 when i moved out sadly. i knew he would be better staying there so instead of putting him through another insufferable airplane ride, i let him stay with my mom. it was a bit hard when i decided to move away. because i knew i couldnt take him with me. but despite the sadness that i feel from missing his meows, his playful aura, at least i have 11 years of memories with him. and no one can take that away from me. as of writing this, this year he will be 13 years old!!!! hes such a big boy!! i hope to visit him sometime in the future. and if anything happens, i am so so so happy i got to watch him grow right beside me and spend my time with such a wonderful cat. my meow meow. love you forever mizu
+			<div class="text-bbl left">
+				<p>mizu has been there through my worst times, and my best times. i've spent 11 years of my life with this cat. and man, do i love him so much. i had to say goodbye to him in 2021 when i moved out sadly. i knew he would be better staying there so instead of putting him through another insufferable airplane ride, i let him stay with my mom. it was a bit hard when i decided to move away. because i knew i couldnt take him with me. but despite the sadness that i feel from missing his meows, his playful aura, at least i have 11 years of memories with him. and no one can take that away from me. as of writing this, this year he will be 13 years old!!!! hes such a big boy!! i hope to visit him sometime in the future. and if anything happens, i am so so so happy i got to watch him grow right beside me and spend my time with such a wonderful cat. my meow meow. love you forever mizu.</p>
 			</div>
 
 			<!-- 	stickers -->
@@ -184,111 +181,96 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 
 			<div class="hoverfx" style="top:75%;left:-1%;"><img title="peeking from his tunnel" src="!g/tunnel.jpg" width="230px"></div>
 
-			<div class="hoverfx" style="top:75%;left:25%;"><img title="laptop" src="!g/laptop.jpg" width="200px"></div>
+			<div class="hoverfx" style="top:74.5%;left:25%;"><img title="laptop" src="!g/laptop.jpg" width="200px"></div>
 
-			<div class="hoverfx" style="top:84%;left:25%;"><img title="handsome" src="!g/perfection.jpg" width="210px"></div>
+			<div class="hoverfx" style="top:82.5%;left:25%;"><img title="handsome" src="!g/perfection.jpg" width="210px"></div>
 			<!-- 	pic -->
 
-			<div class="hoverfx" style="top:83%;left:0%;"><img title="helping me build an ikea desk" src="!g/ikeadrawer.jpg" width="230px"></div>
+			<div class="hoverfx" style="top:82.5%;left:0%;"><img title="helping me build an ikea desk" src="!g/ikeadrawer.jpg" width="230px"></div>
 
 			<!-- 	pic -->
 
-			<div class="hoverfx" style="top:94%;
+			<div class="hoverfx" style="top:91.5%;
  left:24%;"><img title="how maggots look at you when you lift the corpse" src="!g/howmaggotslookatyouwhenyouliftthecorpse.jpg" width="220px"></div>
 
 			<!-- 	pic -->
 
-			<div class="hoverfx" title="this was the last pic i took of him :') mizu on top of my carry on suitcase" style="top:92%;left:-3%;">
-
+			<div class="hoverfx" title="this was the last pic i took of him :') mizu on top of my carry on suitcase" style="top:91%;left:-1%;">
 				<div class="deco" style="top:6%;left:1%"><img class="border1" src="/!g/deco/hearts.gif" width=""></div>
-
 				<div class="deco" style="top:86%;left:97%;"><img class="border1" src="/!g/deco/catpat.gif"></div>
-
-				<img src="!g/suitcasemizu.jpg" width="250px">
+				<img src="!g/suitcasemizu.jpg" width="230px">
 			</div>
 
-			<!-- 	pic -->
 
-			<div class="hoverfx" style="top:99.5%;left:53%;"><img title="biting my biology homework" src="!g/bitingmyhw.jpg" width="230px"></div>
-
-			<div class="hoverfx" style="top:99.5%;left:80%;">
-				<div class="deco" style="top:90%;left:100%;"><img src="/!g/deco/cat2.gif" class="border1"></div><img title="angry cus i told him to stop biting my biology homework" src="!g/whenitoldhimhecantbitemyhw.jpg" width="230px">
-			</div>
-
-			<div class="hoverfx" style="top:103%;left:-2%;"><img title="loafin' around" src="!g/meow1.jpg" width="200px"></div>
-
-			<div class="hoverfx" style="top:109%;left:1%;"><img title="instant camera mizu" src="!g/meow3.jpg" width="150px"></div>
-
-			<div class="hoverfx" style="top:107%;
- left:55%;">
-				<div class="deco" style="top:84%;left:92%;"><img src="/!g/deco/flower7.gif" class=""></div><img title="flowers" src="!g/meow6.jpg" width="485px">
-			</div>
-
-			<div class="hoverfx" style="top:114%;
- left:1%;"><img title="bro thinks hes a lion lol" src="!g/cubbie.jpg" width="290px"></div>
-
-			<div class="hoverfx" style="top:112%;
- left:34%;"><img title="he loves sleeping like this" src="!g/helovessleepinglikethisidk.jpg" width="170px"></div>
-
-			<div class="hoverfx" style="top:103%;left:20%;">
-				<div class="deco" style="top:110%;left:18%;"><img class="border1" src="/!g/deco/catstre.gif" width="300px"></div>
-				<img title="on top of the fridge" src="!g/fridge.jpg" width="300px">
-			</div>
-
-			<div class="hoverfx" style="top:118%;
- left:34%;"><img title="sleeping with the pots n pans" src="!g/potsnpans.jpg" width="300px"></div>
-
-			<div class="hoverfx" style="top:118%;
- left:69%;"><img title="chillin on my desk" src="!g/onmydesk.jpg" width="320px"></div>
-
-			<div class="hoverfx" style="top:126%;
- left:1%;">
-				<div class="deco" style="top:90%;left:0%;"><img src="/!g/deco/heart1.gif" class=""></div><img title="meow meow......" src="!g/meowmeow.jpg" width="250px">
-			</div>
-
-			<div class="hoverfx" style="top:126%;
- left:31%;"><img title="WOAHHHH" src="!g/meow.jpg" width="250px"></div>
-
-			<div class="hoverfx" style="top:125%;
- left:60%;">
-				<div class="deco" style="top:;left:;"><img class="border1" src="/!g/deco/catatsume1.gif" width="200px"></div><img title=":3" src="!g/soeeepyyyyyy.jpg" width="380px">
-			</div>
-
-			<div id="text" class="right">
-				<p>mizu fun facts:
+			<div class="text-bbl right">
+				<h3>mizu fun facts</h3>
 				<ul>
-					<li>brought a bird to me while i was playing overwatch
-					<li>meow meow
-					<li>love munching on cardboard ?
-					<li>follows me around when i go outside
-					<li>best friends with a pug
-					<li>im still not sure if his eyes are green or yellow
-					<li>loves tummy pets
-					<li>only sleeps with me on my bed during winter
-					<li>bestie
-					<li>has a lot to say
-					<li>after i shower he loves licking the bathroom walls idk whats wrong with him
-					<li>this is how he meows:
+					<li>brought a bird to me while i was playing overwatch</li>
+					<li>meow meow</li>
+					<li>love munching on cardboard ?</li>
+					<li>follows me around when i go outside</li>
+					<li>best friends with a pug</li>
+					<li>im still not sure if his eyes are green or yellow</li>
+					<li>loves tummy pets</li>
+					<li>only sleeps with me on my bed during winter</li>
+					<li>bestie</li>
+					<li>has a lot to say</li>
+					<li>after i shower he loves licking the bathroom walls idk whats wrong with him</li>
+					<li>this is how he meows:</li>
 				</ul>
 				<br>
-				<center><video id="video" width="50%" controls>
+				<center>
+					<video width="50%" controls>
 						<source src="https://files.catbox.moe/bkyh4k.mp4" type="video/mp4">
+					</video>
 				</center>
 			</div>
-
 
 			<!-- container end div -->
 		</div>
 
-		<div id="containerfoot" class="centered">
-			<div id="footer">
-				<p>last updated: 28 june 2023
-				<p><b>resources used in this page:</b> cursor from <a href="https://www.cursors-4u.com" target="_blank">cursors 4u</a>, basiic font by <a href="https://cinni.net/?z=/font" target="_blank">cinni</a>
-			</div>
+		<div id="gallery" class="text-bbl">
+			<h3>extra pics of mizu</h3>
 
-			<img src="!g/doitforhim.jpg" width="300px">
-			<!-- 		container footer end div -->
+			<div class="container">
+				<!--			column 1-->
+				<div class="column">
+
+					<img title="chillin on my desk" src="!g/onmydesk.jpg">
+					<img title="bro thinks hes a lion lol" src="!g/cubbie.jpg">
+					<img src="!g/why-is-he-so-handsome.jpg">
+					<img title="biting my biology homework" src="!g/bitingmyhw.jpg">
+					<img title="angry cus i told him to stop biting my biology homework" src="!g/whenitoldhimhecantbitemyhw.jpg">
+				</div>
+				<!--				column 2-->
+				<div class="column">
+					<img title="do it for him!" src="!g/doitforhim.jpg">
+					<img title="loafin' around" src="!g/meow1.jpg">
+					<img title="instant camera mizu" src="!g/meow3.jpg">
+					<img title=":3" src="!g/soeeepyyyyyy.jpg">
+					<img title="meow meow......" src="!g/meowmeow.jpg">
+					<img title="WOAHHHH" src="!g/meow.jpg">
+					<img title="he loves sleeping like this" src="!g/helovessleepinglikethisidk.jpg">
+				</div>
+				<!--				column 3-->
+				<div class="column">
+					<img title="feeling festive" src="!g/christmas.jpeg">
+					<img src="!g/ponty.jpg">
+					<img title="flowers" src="!g/meow6.jpg">
+					<img title="sleeping with the pots n pans" src="!g/potsnpans.jpg">
+					<img title="on top of the fridge" src="!g/fridge.jpg">
+					<img src="!g/woie.jpg">
+				</div>
+				<!--			container end div-->
+			</div>
 		</div>
+
+		<div id="footer" class="text-bbl">
+			<p>last updated: 28 june 2023</p>
+			<p><b>resources used in this page:</b> cursor from <a href="https://www.cursors-4u.com" target="_blank">cursors 4u</a>, basiic font by <a href="https://cinni.net/?z=/font" target="_blank">cinni</a></p>
+		</div>
+
+
 		<!-- 	main wrapper end div -->
 	</div>
 
