updated mizu shrine
- forgot to add the date

--- a/website/shrines/mizu/index.html
+++ b/website/shrines/mizu/index.html
@@ -266,7 +266,7 @@ palette: https://coolors.co/ffb1c9-ffddea-ffe8b0-ffffb3-c8f7b0-b0edf9-f2d8fd
 		</div>
 
 		<div id="footer" class="text-bbl">
-			<p>last updated: 28 june 2023</p>
+			<p>last updated: 25.jan.24</p>
 			<p><b>resources used in this page:</b> cursor from <a href="https://www.cursors-4u.com" target="_blank">cursors 4u</a>, basiic font by <a href="https://cinni.net/?z=/font" target="_blank">cinni</a></p>
 		</div>
 
