updated landing and home pages
- updated the currently section
- added the journalring to landing page
- also hopefully fixed the weird look what webrings had on the landing page

--- a/website/home.html
+++ b/website/home.html
@@ -121,15 +121,16 @@ feel free to look around :) just don't be THAT person and take the entire code f
 			<p><span class="hl">playing:</span> <a href="/vgs/fashion-dreamer/">fashion dreamer</a></p>
 			<p><span class="hl">reading:</span> <i>the guy she was interested in wasn't a guy at all</i> by sumiko arai, <i>chainsaw man</i> by tatsuki
 				fujimoto</p>
-			<p><span class="hl">watching:</span> - </p>
+			<p><span class="hl">watching:</span> kaiba (AGAIN)</p>
 			<p><span class="hl">listening to:</span> <span id="song">&#8987;</span></p>
-			<p><span class="hl">working on:</span> getting an apartment and uni!</p>
+			<p><span class="hl">working on:</span> i'm still cleaning my apartment ( ˘︹˘ )</p>
 			<p><span class="hl">coding/writing:</span> journal log soon... <img src="/!g/pix/emote1cov.gif" alt=""></p>
-			<p class="date">last updated on 15.jan.24</p>
+			<p class="date">last updated on 02.feb.24</p>
 		</div>
 
 		<div id="updates" class="box">
 			<h2>updates</h2>
+			<li>25.jan.24 - updated and fixed <a href="/shrines/mizu/index.html">mizu shrine</a> code and added a little gallery at the end so i can keep adding mizu pics!</li>
 			<li>20.jan.24 - added new entry to <a href="/photobook/index.html">photobook</a> + <a href="/scrapbook/2024/index.html">scrapbook</a> + new featured page!</li>
 			<li>15.jan.24 - created <a href="/collection/cats">cat hoarding</a> page in collection!</li>
 			<li>12.jan.24 - created <a href="/scrapbook">scrapbook</a>! <small>will be decorating it more in the future!</small></li>
