--- a/website/index.html
+++ b/website/index.html
@@ -107,6 +107,7 @@
 		<p>this website uses <u>javascript</u> and <u>iframes</u>. on rare occasions there will be <u>autoplay audio</u>, and discussions of <u>heavy topics</u>. there will be warnings for the latter.</p>
 		<p class="hide"><b>homepage is compatible with mobile devices but i cannot guarantee that for every page on my site, sorry!</b></p>
 		<p>this is a personal website made for my own enjoyment. with that said, have fun browsing!</p>
+		<p>contact me @ <a href="mailto:doqmeat@gmail.com">doqmeat@gmail.com</a></p>
 	</main>
 
 	<!--
@@ -122,42 +123,47 @@
 
 	<div id="webrings">
 		<h3>webrings</h3>
-		<center>
-			<!-- neo creatives -->
-			<div id='ncring' style="margin:auto;">
-				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-variables.js"></script>
-				<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-widget.js"></script>
-			</div>
+		<!--			journalring -->
+		<journal-ring icon="lavender"></journal-ring>
+		<script async src="https://cdn.jsdelivr.net/gh/js044/nenrikido@main/static/js/misc/journalring.js"></script>
 
-			<!-- mob psycho 100 / mp100 webring -->
+		<!-- neo creatives -->
+		<div id='ncring' style="margin:auto;">
+			<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-variables.js"></script>
+			<script type="text/javascript" src="https://neocreatives.neocities.org/onionring-widget.js"></script>
+		</div>
+
+		<!-- mob psycho 100 / mp100 webring -->
+		<center>
 			<div id='mobring' style="width:200px;">
 				<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/onionring-variables.js"></script>
 				<script type="text/javascript" src="https://sugarforbrains.neocities.org/mobring/basic-widget.js"></script>
 			</div>
-
-			<!-- pikring -->
-			<div id='PikRing' style="margin:5px 0px;">
-				<link rel="stylesheet" href="https://nickolox.neocities.org/pikring/css/rock.css">
-				<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-variables.js"></script>
-				<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
-			</div>
-
-			<!-- wiiring -->
-			<div style="width:150px;margin:auto;">
-				<script src="https://jeith.neocities.org/assets/webring/wii-ring.js"></script>
-				<wii-ring site="https://doqmeat.neocities.org"></wii-ring>
-			</div>
-
-			<!--  vocaloid webring -->
-			<div id="vocaring">
-				<script type="text/javascript" src="https://adilene.net/webring/webring-variables.js"></script>
-				<script type="text/javascript" src="https://adilene.net/webring/webring-widget.js"></script>
-				<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
-			</div>
-
-			<!-- melonland surf -->
-			<object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
 		</center>
+
+		<!-- pikring -->
+		<div id='PikRing' style="margin:5px 0px;">
+			<link rel="stylesheet" href="https://nickolox.neocities.org/pikring/css/rock.css">
+			<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-variables.js"></script>
+			<script type="text/javascript" src="https://nickolox.neocities.org/pikring/pikring-widget.js"></script>
+		</div>
+
+		<!-- wiiring -->
+		<div style="width:150px;margin:auto;">
+			<script src="https://jeith.neocities.org/assets/webring/wii-ring.js"></script>
+			<wii-ring site="https://doqmeat.neocities.org"></wii-ring>
+		</div>
+
+		<!--  vocaloid webring -->
+		<div id="vocaring">
+			<script type="text/javascript" src="https://adilene.net/webring/webring-variables.js"></script>
+			<script type="text/javascript" src="https://adilene.net/webring/webring-widget.js"></script>
+			<script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
+		</div>
+
+		<!-- melonland surf -->
+		<object id="melonland-surf-club" data="https://melonland.net/surf-badge.svg?fill=#c999f0" type="image/svg+xml" style="width: 100px; height: 100px;"></object>
+
 	</div>
 
 	<div id="cred">
