--- a/website/journal/index.html
+++ b/website/journal/index.html
@@ -61,6 +61,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 			<a href="credit.html" target="iframe_a">credit page</a>
 			<details open>
 				<summary>2024</summary>
+				<a href="2024/02.html" target="iframe_a">february</a>
 				<a href="2024/01.html" target="iframe_a">january</a>
 			</details>
 			<details>
@@ -80,7 +81,7 @@ palette url: https://coolors.co/c7d9f8-c9525e-e4a79d-fffcdc-a6ddff-d0ff8d-ffe481
 		</div>
 
 		<div id="col2">
-			<iframe src="2024/01.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
+			<iframe src="2024/02.html" name="iframe_a" height="100%" width="100%" style="border:none;"></iframe>
 		</div>
 	</div>
 
