--- a/website/collection/cats/index.html
+++ b/website/collection/cats/index.html
@@ -24,6 +24,7 @@
 
 		<!--column 1-->
 		<div class="column">
+			<img src="!g/stupid-tiger.jpg" alt="stupid tiger">
 			<img src="!g/baby-cat.jpeg" alt="cat with a bib">
 			<img src="!g/ballin.jpeg">
 			<img src="!g/bigoleyes.jpeg">
@@ -100,9 +101,9 @@
 
 	<footer>
 		<img src="div1.gif" alt=""><img src="div.gif" alt=""><img src="div2.gif" alt="">
-
 		<br>
-
+		<b>last updated: 17.feb.24</b>
+		<br>
 		<b>credit:</b> page made with materials by <a href="http://tora7.ciao.jp" target="_blank">tora7.ciao.jp</a> / <a href="/notebook/links/fonts.html">fonts</a> used: cat paw
 
 		<br>
